--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "subash",
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "fast-csv": "^4.3.6",
+    "ml-logistic-regression": "^2.0.0",
+    "node-pid-controller": "^1.0.1",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1"
   }
